k8s/wireguard/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: wireguard
  labels:
    app: wireguard
spec:
  selector:
    app: wireguard
  ports:
    - name: wireguard
      port: 51820
      targetPort: 51820
      protocol: UDP
  type: ClusterIP
